--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
     "version": 2,
     "builds":[
-        {"src": "app.py", "use": "@vercel/python"}
+        {"src": "index.py",
+        "use": "@vercel/python",
+        "config":{"runtime":"python3.6"} }
 
     ],
     "routes":[
-        {"src": "/(.*)", "dest": "app.py"}
+        {"src": "/(.*)",
+        "dest": "/"}
     ]
 }
