--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # GROQ_API_KEY="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"
 
-# GROQ_API_KEY="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"
+GROQ_API_KEY="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"
