--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds":[
-        {"src": "index.py",
+        {"src": "app.py",
         "use": "@vercel/python",
         "config":{"runtime":"python3.6"} }
 
